--- a/RunDDPG_Colab.ipynb
+++ b/RunDDPG_Colab.ipynb
@@ -15,62 +15,31 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Defaulting to user installation because normal site-packages is not writeable\n",
-            "Requirement already satisfied: swig in c:\\users\\你姐不信任我\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (4.4.0)\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "[notice] A new release of pip is available: 25.0.1 -> 25.3\n",
-            "[notice] To update, run: C:\\Users\\你姐不信任我\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Defaulting to user installation because normal site-packages is not writeable\n",
-            "Collecting gymnasium[box2d]\n",
-            "  Using cached gymnasium-1.2.2-py3-none-any.whl.metadata (10 kB)\n",
-            "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\你姐不信任我\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from gymnasium[box2d]) (1.26.4)\n",
-            "Requirement already satisfied: cloudpickle>=1.2.0 in c:\\users\\你姐不信任我\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from gymnasium[box2d]) (3.1.0)\n",
-            "Requirement already satisfied: typing-extensions>=4.3.0 in c:\\users\\你姐不信任我\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from gymnasium[box2d]) (4.12.2)\n",
-            "Collecting farama-notifications>=0.0.1 (from gymnasium[box2d])\n",
-            "  Using cached Farama_Notifications-0.0.4-py3-none-any.whl.metadata (558 bytes)\n",
-            "Collecting box2d-py==2.3.5 (from gymnasium[box2d])\n",
-            "  Using cached box2d-py-2.3.5.tar.gz (374 kB)\n",
-            "  Preparing metadata (setup.py): started\n",
-            "  Preparing metadata (setup.py): finished with status 'done'\n",
-            "Requirement already satisfied: pygame>=2.1.3 in c:\\users\\你姐不信任我\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from gymnasium[box2d]) (2.5.2)\n",
-            "Requirement already satisfied: swig==4.* in c:\\users\\你姐不信任我\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from gymnasium[box2d]) (4.4.0)\n",
-            "Using cached Farama_Notifications-0.0.4-py3-none-any.whl (2.5 kB)\n",
-            "Using cached gymnasium-1.2.2-py3-none-any.whl (952 kB)\n",
-            "Building wheels for collected packages: box2d-py\n",
-            "  Building wheel for box2d-py (setup.py): started\n",
-            "  Building wheel for box2d-py (setup.py): finished with status 'done'\n",
-            "  Created wheel for box2d-py: filename=box2d_py-2.3.5-cp312-cp312-win_amd64.whl size=433577 sha256=32e382b43f389e0175595ab49f808d7f29ccdae58d405728af1df22e76485ec5\n",
-            "  Stored in directory: c:\\users\\你姐不信任我\\appdata\\local\\pip\\cache\\wheels\\2a\\e9\\60\\774da0bcd07f7dc7761a8590fa2d065e4069568e78dcdc3318\n",
-            "Successfully built box2d-py\n",
-            "Installing collected packages: farama-notifications, box2d-py, gymnasium\n",
-            "Successfully installed box2d-py-2.3.5 farama-notifications-0.0.4 gymnasium-1.2.2\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "[notice] A new release of pip is available: 25.0.1 -> 25.3\n",
-            "[notice] To update, run: C:\\Users\\你姐不信任我\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+            "zsh:1: /Users/yufengchen/Desktop/GIA(25-26)/APRNS/APRNS/bin/pip: bad interpreter: /Users/yufengchen/Desktop/GIA(25-26)/APRNS/Lab3/APRNS/bin/python3.13: no such file or directory\n",
+            "zsh:1: no matches found: gymnasium[box2d]\n"
           ]
         }
       ],
       "source": [
         "!pip install swig\n",
         "!pip install gymnasium[box2d]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "zsh:1: /Users/yufengchen/Desktop/GIA(25-26)/APRNS/APRNS/bin/pip: bad interpreter: /Users/yufengchen/Desktop/GIA(25-26)/APRNS/Lab3/APRNS/bin/python3.13: no such file or directory\n"
+          ]
+        }
+      ],
+      "source": [
+        "!pip install torch"
       ]
     },
     {
@@ -88,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -101,7 +70,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "^C\n"
+            "Traceback (most recent call last):\n",
+            "  File \u001b[35m\"/Users/yufengchen/Desktop/GIA(25-26)/APRNS/Lab7/DDPG.py\"\u001b[0m, line \u001b[35m3\u001b[0m, in \u001b[35m<module>\u001b[0m\n",
+            "    import torch\n",
+            "\u001b[1;35mModuleNotFoundError\u001b[0m: \u001b[35mNo module named 'torch'\u001b[0m\n"
           ]
         }
       ],
@@ -117,7 +89,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "APRNS",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -130,7 +103,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.10"
+      "version": "3.13.7"
     }
   },
   "nbformat": 4,
